--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://dl.dropbox.com/s/ya2t6eaa264yxdp/style.css">
+        <link rel="stylesheet" href="https://dl.dropbox.com/s/ccv3c038lqqluq5/style.css">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -18,16 +18,16 @@
             </label>
             <img class="rui-animation-play-paused" src="https://dl.dropbox.com/s/24wqjla27paz7f4/music_icon.png" id="music" onclick="music()"/>
             <audio controls loop class=backgroundMusic id="backgroundMusic">
-                <source src="https://dl.dropbox.com/s/5vrtl2ip3uk55sb/song.mp3">
+                <source src="https://dl.dropbox.com/s/e0w1qenv5gpdp8c/song.mp3">
             </audio>
         </div>
         <div class=header>
             <div class=header_title>
                 <div class=header_title_sub>
-                    <div id="headline" class="headline">You are invited! <br>  </div> <br>
+                    <div id="headline" class="headline">You are invited!  </div>
                     <div class="headlineDate"> 5th Nov 2022 </div>
                     <div id="countdown" class="countdown">
-                        <ul>
+                        <ul class=ulclass>
                             <li><span id="days" class="headerdatetime1"></span><div class="days">Days</div></li>
                             <li><span id="hours" class="headerdatetime2"></span><div class="hours">Hours</div></li>
                             <li><span id="minutes" class="headerdatetime3"></span><div class="minutes">Minutes</div></li>
@@ -59,12 +59,24 @@
             <div class=secondSegment>
                 <div class=secondSegmentSub>
                     <div class=secondSegmentTitle>
-                        ~Groom & Bride~
+                        Groom & Bride
                     </div>
-                    <br><br><br>
+                    <br>
+                    <img src="https://dl.dropbox.com/s/4vmf84r8noypsjj/secondsegmentpic.jpg" class=secondSegmentPic>
+                    <div class=secondSegmentDesc>
+                        It is our pleasure to invite you to our wedding dinner.<br>We would be deeply pleased with your presence.
+                    </div>
+                </div>
+            </div>
+            <!--div class=secondSegment>
+                <div class=secondSegmentSub>
+                    <div class=secondSegmentTitle>
+                        Groom & Bride
+                    </div>
+                    <br>
                     <div class=groom>
                         <div class=groomDesc>
-                        <u>About Groom</u> <br><br>Lee Ming Huat @ Michael <br> <br> Every love story is beautiful, <br> but ours is my favorite.
+                        About Groom</u> <br><br>Lee Ming Huat @ Michael <br> <br> Every love story is beautiful, <br> but ours is my favorite.
                         </div>
                         <div class=groom_pic>
                             <img src="https://dl.dropbox.com/s/m41fn895qmiqcz8/groom.jpg">
@@ -76,59 +88,48 @@
                             <img src="https://dl.dropbox.com/s/t8pnz7u28vcijha/bride.jpg">
                         </div>
                         <div class=brideDesc>
-                        <u>About Bride</u> <br> <br>Rainy Cheong<br><br>The best thing to hold onto in life <br> is each other.
+                        About Bride</u> <br> <br>Rainy Cheong<br><br>The best thing to hold onto in life <br> is each other.
                         </div>
                     </div>
                 </div>
-            </div>
+            </div-->
             <div class=thirdSegment>
                 <div class=thirdSegmentTitle>
-                    We'd love to share our <br> happiness with you
+                    Our Love Story
                 </div>
                 <br>
                 <div class=imageGallery>
                     <div class="mySlides fadein" id="mySlides1">
-                      <div class="numbertext">1 / 11</div>
                       <img src="https://dl.dropbox.com/s/p3yl6e6cxmrns43/1.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides2">
-                      <div class="numbertext">2 / 11</div>
                       <img src="https://dl.dropbox.com/s/c4j3o25csup16ex/2.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides3">
-                      <div class="numbertext">3 / 11</div>
                       <img src="https://dl.dropbox.com/s/88rdivwvhfrki5p/3.jpg?" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides4">
-                      <div class="numbertext">4 / 11</div>
                       <img src="https://dl.dropbox.com/s/qq80rr38776gi0c/4.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides5">
-                      <div class="numbertext">5 / 11</div>
                       <img src="https://dl.dropbox.com/s/o8r43bgnsc5olxv/5.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides6">
-                      <div class="numbertext">6 / 11</div>
                       <img src="https://dl.dropbox.com/s/hsmkch6884t3m9f/6.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides7">
-                      <div class="numbertext">7 / 11</div>
                       <img src="https://dl.dropbox.com/s/mg3k6lzjq0oltvx/7.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides8">
-                      <div class="numbertext">8 / 11</div>
                       <img src="https://dl.dropbox.com/s/i74pxp99pv88fnz/8.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides9">
-                      <div class="numbertext">9 / 11</div>
                       <img src="https://dl.dropbox.com/s/wacb5a495x90lk4/9.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides10">
-                      <div class="numbertext">10 / 11</div>
                       <img src="https://dl.dropbox.com/s/p6qe5mk5jvllfpn/10.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides11">
-                      <div class="numbertext">11 / 11</div>
                       <img src="https://dl.dropbox.com/s/9jr8xkhfjj48ftl/11.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
 
@@ -162,7 +163,7 @@
                     <div class=whenAndWhere>
                         <div class=when>
                             <h2>When<br></h2>
-                            November 5, 2022 <br> at 07:00 pm
+                            November 5, 2022 <br> at 06:30 pm
                         </div>
                         <div class=where>
                             <h2>Where<br></h2>
@@ -260,6 +261,6 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"defer></script>
-        <script src='https://dl.dropbox.com/s/j6logovawwb4nxo/script.js'></script>
+        <script src='https://dl.dropbox.com/s/93mgoif6v093fj8/script.js'></script>
     </body>
 </html>
