--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://dl.dropbox.com/s/ccv3c038lqqluq5/style.css">
+        <link rel="stylesheet" href="https://dl.dropbox.com/s/wj0u0m1xiha0w8f/style.css">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -106,7 +106,7 @@
                       <img src="https://dl.dropbox.com/s/c4j3o25csup16ex/2.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides3">
-                      <img src="https://dl.dropbox.com/s/88rdivwvhfrki5p/3.jpg?" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                      <img src="https://dl.dropbox.com/s/88rdivwvhfrki5p/3.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
                     <div class="mySlides fadein" id="mySlides4">
                       <img src="https://dl.dropbox.com/s/qq80rr38776gi0c/4.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
@@ -133,6 +133,52 @@
                       <img src="https://dl.dropbox.com/s/9jr8xkhfjj48ftl/11.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
                     </div>
 
+                    <div class="mySlides fadein" id="mySlides12">
+                      <img src="https://dl.dropbox.com/s/8alpom4dv7sx1io/12.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides13">
+                      <img src="https://dl.dropbox.com/s/g7yfx8tzy5otg86/13.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides14">
+                      <img src="https://dl.dropbox.com/s/n6ggsg5enis94t7/14.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides15">
+                      <img src="https://dl.dropbox.com/s/bu1c5cfxqk3nefj/15.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides16">
+                      <img src="https://dl.dropbox.com/s/krcgovk3ython0n/16.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides17">
+                      <img src="https://dl.dropbox.com/s/kvvv3ldbfs8510n/17.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides18">
+                      <img src="https://dl.dropbox.com/s/kxryxdd0k7q3nus/18.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides19">
+                      <img src="https://dl.dropbox.com/s/73bgjz4t0i8vsqq/19.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides20">
+                      <img src="https://dl.dropbox.com/s/pvvtmf0bpf30tce/20.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides21">
+                      <img src="https://dl.dropbox.com/s/jk4o1i4ra99o4f1/21.JPG" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides22">
+                      <img src="https://dl.dropbox.com/s/11cpye2uh3aom6o/22.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides23">
+                      <img src="https://dl.dropbox.com/s/r721812gewmvivh/23.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides24">
+                      <img src="https://dl.dropbox.com/s/afdoqicckrljpkj/24.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides25">
+                      <img src="https://dl.dropbox.com/s/b7i1bnvjo308kgc/25.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+                    <div class="mySlides fadein" id="mySlides26">
+                      <img src="https://dl.dropbox.com/s/sgtkdupl7mji5xj/26.jpg" style="max-height:100%; max-width: 100%" class="imageSlideshow">
+                    </div>
+
                     <a class="prev" onclick="plusSlides(-1)">❮</a>
                     <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -151,6 +197,21 @@
                   <span class="dot" onclick="currentSlide(9)"></span>
                   <span class="dot" onclick="currentSlide(10)"></span> 
                   <span class="dot" onclick="currentSlide(11)"></span>
+                  <span class="dot" onclick="currentSlide(12)"></span> 
+                  <span class="dot" onclick="currentSlide(13)"></span>
+                  <span class="dot" onclick="currentSlide(14)"></span> 
+                  <span class="dot" onclick="currentSlide(15)"></span> 
+                  <span class="dot" onclick="currentSlide(16)"></span>
+                  <span class="dot" onclick="currentSlide(17)"></span> 
+                  <span class="dot" onclick="currentSlide(18)"></span> 
+                  <span class="dot" onclick="currentSlide(19)"></span>
+                  <span class="dot" onclick="currentSlide(20)"></span> 
+                  <span class="dot" onclick="currentSlide(21)"></span>
+                  <span class="dot" onclick="currentSlide(22)"></span>
+                  <span class="dot" onclick="currentSlide(23)"></span> 
+                  <span class="dot" onclick="currentSlide(24)"></span> 
+                  <span class="dot" onclick="currentSlide(25)"></span>
+                  <span class="dot" onclick="currentSlide(26)"></span>
                 </div>
             </div>
 
@@ -261,6 +322,6 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"defer></script>
-        <script src='https://dl.dropbox.com/s/93mgoif6v093fj8/script.js'></script>
+        <script src='https://dl.dropbox.com/s/nbkaxuvhwlbsqkr/script.js'></script>
     </body>
 </html>
